--- a/index.Rmd
+++ b/index.Rmd
@@ -38,13 +38,13 @@ for (i in df) {
   earthquake[j, "type"] <- i$properties$type
   
   if (i$properties$type == "earthquake") {
-    earthquake[j, "color"] <- "#5ea0d0"
+    earthquake[j, "color"] <- "#377eb8"
   } else if (i$properties$type == "quarry blast") {
-    earthquake[j, "color"] <- "#e26661"
+    earthquake[j, "color"] <- "#e41a1c"
   } else if (i$properties$type == "explosion") {
-    earthquake[j, "color"] <- "#fca65b"
+    earthquake[j, "color"] <- "#ff7f00"
   } else {
-    earthquake[j, "color"] <- "#6fbc65"
+    earthquake[j, "color"] <- "#4daf4a"
   }
   
   earthquake[j, "title"] <- i$properties$title
