--- a/index.Rmd
+++ b/index.Rmd
@@ -38,7 +38,7 @@ for (i in df) {
   earthquake[j, "place"] <- i$properties$place
   earthquake[j, "url"] <- i$properties$url
   earthquake[j, "type"] <- i$properties$type
-  earthquake[j, "time"] <- as_datetime(i$properties$time/1000)
+  earthquake[j, "time"] <- i$properties$time/1000
   
   if (i$properties$type == "earthquake") {
     earthquake[j, "color"] <- "#377eb8"
@@ -56,6 +56,7 @@ for (i in df) {
   j <- j + 1
 }
 
+earthquake$time <- as_datetime(earthquake$time)
 earthquake <- st_as_sf(earthquake, coords = c("long", "lat"), crs = 4326)
 ```
 
@@ -110,6 +111,7 @@ plot_ly() %>%
       color = earthquake[which(earthquake$type == "earthquake"),]$color
     ),
     hovertext = paste0("Earthquake Magnitude Scales: ", earthquake[which(earthquake$type == "earthquake"),]$mag, "\n",
+                       "Time: ", earthquake[which(earthquake$type == "earthquake"),]$time, "\n",
                        "Place: ", earthquake[which(earthquake$type == "earthquake"),]$place, "\n",
                        "Type: ", earthquake[which(earthquake$type == "earthquake"),]$type, "\n",
                        "URL: ", earthquake[which(earthquake$type == "earthquake"),]$url)
@@ -125,6 +127,7 @@ plot_ly() %>%
       color = earthquake[which(earthquake$type == "explosion"),]$color
     ),
     hovertext = paste0("Earthquake Magnitude Scales: ", earthquake[which(earthquake$type == "explosion"),]$mag, "\n",
+                       "Time: ", earthquake[which(earthquake$type == "explosion"),]$time, "\n",
                        "Place: ", earthquake[which(earthquake$type == "explosion"),]$place, "\n",
                        "Type: ", earthquake[which(earthquake$type == "explosion"),]$type, "\n",
                        "URL: ", earthquake[which(earthquake$type == "explosion"),]$url)
@@ -140,6 +143,7 @@ plot_ly() %>%
       color = earthquake[which(earthquake$type == "quarry blast"),]$color
     ),
     hovertext = paste0("Earthquake Magnitude Scales: ", earthquake[which(earthquake$type == "quarry blast"),]$mag, "\n",
+                       "Time: ", earthquake[which(earthquake$type == "quarry blast"),]$time, "\n",
                        "Place: ", earthquake[which(earthquake$type == "quarry blast"),]$place, "\n",
                        "Type: ", earthquake[which(earthquake$type == "quarry blast"),]$type, "\n",
                        "URL: ", earthquake[which(earthquake$type == "quarry blast"),]$url)
@@ -155,6 +159,7 @@ plot_ly() %>%
       color = earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$color
     ),
     hovertext = paste0("Earthquake Magnitude Scales: ", earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$mag, "\n",
+                       "Time: ", earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$time, "\n",
                        "Place: ", earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$place, "\n",
                        "Type: ", earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$type, "\n",
                        "URL: ", earthquake[which(!earthquake$type %in% c("earthquake", "explosion", "quarry blast")),]$url)
